<resources>
    <string name="app_name">Finance_App</string>
    <string name="versionName">1.2.1</string>

    <!-- 全局的一些字符串 -->
    <string name="btn_back">退出</string>
    <string name="text_vip">VIP</string>
    <string name="btn_ok">确定</string>
    <string name="user_login_name">用户名（注册时的手机号）</string>
    <string name="copyright_fiance">CopyRight©Fiance</string>
    <string name="no_source">没有信息</string>

    <!-- Splash界面 -->
    <string name="act_splash_text_tip_tv">ENew\n\n不一样的生活</string>
    <!-- 主界面 -->
    <string name="main_activity_refresh_btn">刷新</string>
    <string name="main_activity_voice_btn">语音</string>
    <string name="main_activity_channel_add_btn">频道</string>
    <string name="main_activity_user_btn">用户</string>

    <!-- 用户登陆界面 -->
    <string name="act_user_login_password_ev">密码</string>
    <string name="act_user_login_login_btn">登录</string>
    <string name="act_user_login_nologin_tv">跳过登录</string>
    <string name="act_user_login_registe_tv">点击注册</string>
    <string name="check_login_user_name">用户名格式（11位）：1**********</string>
    <string name="act_login_forget_pass_tv">忘记密码</string>

    <!-- 用户注册界面 -->
    <string name="act_regist_title_tv">注册</string>
    <string name="act_regist_username_et">请输入您的电话号码</string>
    <string name="act_regist_password_et">密码:大于6个字符</string>
    <string name="act_regist_password_ok_et">再次输入密码</string>

    <!-- 用户界面 -->
    <string name="act_user_username_tv">未登录</string>
    <string name="act_user_item_push_tv">设置消息接收时间</string>
    <string name="act_user_item_reset_voice_tv">消息重读</string>
    <string name="act_user_item_setpwd_tv">修改密码</string>
    <string name="act_user_logout_tv">用户注销</string>
    <string name="act_user_item_login_tv">用户登录</string>
    <string name="act_user_item_regist_tv">用户注册</string>
    <string name="act_user_item_vip_tv">注册VIP</string>
    <string name="act_user_item_set_ip_tv">设置IP地址</string>

    <!-- 添加频道界面 -->
    <string name="act_add_channel_title_tv">自定义频道</string>
    <string name="act_add_channel_select_style_tv">请选择检索方式</string>
    <string name="act_add_channel_exchange_btn">确定添加</string>

    <!-- 修改密码界面 -->
    <string name="act_set_password_old_pwd_et">当前密码</string>
    <string name="act_set_password_new_pwd_et">新密码（大于6个字符）</string>
    <string name="act_set_password_new_pwd2_tv">确认密码</string>

    <!-- 设置推送时间的 -->
    <string name="act_set_time_title_tv">设置接收推送时间</string>
    <string name="act_set_time_monday_cb">星期一</string>
    <string name="act_set_time_tuesday_cb">星期二</string>
    <string name="act_set_time_wednesday_cb">星期三</string>
    <string name="act_set_time_friday_cb">星期五</string>
    <string name="act_set_time_thursday_cb">星期四</string>
    <string name="act_set_time_saturday_cb">星期六</string>
    <string name="act_set_time_sunday_cb">星期日</string>
    <string name="act_set_time_start_tv">开始推送时间</string>
    <string name="act_set_time_end_tv">结束推送时间</string>
    <string name="act_set_time_type_cb">24小时</string>
    <string name="act_set_time_type_tv">接收时间段</string>
    <string name="act_set_time_set_date_tv">接收日期设置</string>

    <!-- Menu -->
    <string name="menu_main_share_app">分享App</string>

    <!-- 自定义频道界面 -->
    <string name="act_add_channel_futures_tv">期货</string>
    <string name="act_add_channel_stock_tv">股票</string>
    <string name="act_add_channel_exchange_tv">"外汇 "</string>
    <string name="act_add_channel_special_tv">特殊</string>
    <string name="act_add_channel_money_tv">理财</string>
    <string name="act_add_channel_funds_tv">基金</string>
    <string name="act_add_channel_from_code_title_tv">特殊定制方式</string>
    <string name="act_add_channel_from_code_hint_et">请输入股票代码</string>
    <string name="label_add_one_channel">添加频道</string>
    <string name="label_set_push_time">设置推送时间</string>

    <!--查看消息界面-->
    <string name="menu_refresh">刷新</string>
    <string name="menu_open_with_browser">在浏览器中打开</string>
    <string name="act_add_more_channel_select_channel_counts">选择的频道数量：</string>
    <string name="act_add_channel_more_tv">添加多个频道</string>
    <string name="added">已添加</string>
    <string name="not_add">未添加</string>
    <string name="please_select">请选择</string>
    <string name="message_type">信息类型</string>
    <string name="have_account">已有账户？</string>
    <string name="foget_password">忘记密码</string>
    <string name="login">登录</string>
    <string name="login_other">其他方式登录</string>
    <string name="password">PassWord（密码）</string>
    <string name="english_login">Login</string>
    <string name="tip_username">UserName（用户名）</string>

</resources>
