<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/app_base_linearlayout"
        android:layout_margin="10dp">

        <TextView
            style="@style/text_label"
            android:text="@string/act_set_time_set_date_tv"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <CheckBox
                    android:id="@+id/act_set_time_monday_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/act_set_time_monday_cb"
                    android:textSize="@dimen/text_size_default" />

                <CheckBox
                    android:id="@+id/act_set_time_tuesday_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/act_set_time_tuesday_cb"
                    android:textSize="@dimen/text_size_default" />

                <CheckBox
                    android:id="@+id/act_set_time_wednesday_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/act_set_time_wednesday_cb"
                    android:textSize="@dimen/text_size_default" />

                <CheckBox
                    android:id="@+id/act_set_time_thursday_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/act_set_time_thursday_cb"
                    android:textSize="@dimen/text_size_default" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <CheckBox
                    android:id="@+id/act_set_time_friday_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/act_set_time_friday_cb"
                    android:textSize="@dimen/text_size_default" />

                <CheckBox
                    android:id="@+id/act_set_time_saturday_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/act_set_time_saturday_cb"
                    android:textSize="@dimen/text_size_default" />

                <CheckBox
                    android:id="@+id/act_set_time_sunday_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/act_set_time_sunday_cb"
                    android:textSize="@dimen/text_size_default" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/text_label"
                android:text="@string/act_set_time_type_tv"
                android:textSize="@dimen/text_size_default" />

            <CheckBox
                android:id="@+id/timeRule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_set_time_type_cb" />
        </LinearLayout>

        <TextView
            style="@style/text_label"
            android:text="@string/act_set_time_start_tv"
            android:textSize="@dimen/text_size_default" />

        <TimePicker
            android:id="@+id/start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner" />

        <TextView
            style="@style/text_label"
            android:text="@string/act_set_time_end_tv"
            android:textSize="@dimen/text_size_default" />

        <TimePicker
            android:id="@+id/end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner" />

        <Button
            android:id="@+id/bu_setTime"
            style="@style/app_base_btn.ok"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp" />
    </LinearLayout>

</ScrollView>