<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout style="@style/app_base_linearlayout">

        <TextView
            style="@style/text_label"
            android:layout_width="match_parent"
            android:text="@string/act_add_channel_from_code_title_tv"
            android:textSize="25sp" />


        <EditText
            android:id="@+id/expert_info_show"
            style="@style/app_base_text.drawable"
            android:drawableLeft="@drawable/icon_exchange_name"
            android:drawableStart="@drawable/icon_exchange_name"
            android:hint="@string/act_add_channel_from_code_hint_et"
            android:inputType="number" />

        <Button
            android:id="@+id/special_channel_sure"
            style="@style/btn"
            android:layout_width="match_parent"
            android:text="@string/btn_ok" />

    </LinearLayout>
</layout>