<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/icon_user_back"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >

        <Button
            android:id="@+id/act_login_regist_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/user_login_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/tv_back"
            android:gravity="center"
            android:text="@string/act_user_login_regist_tv"
            android:textColor="#fff"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="10dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/act_login_user_name_et"
            style="@style/app_base_text.drawable"
            android:drawableLeft="@drawable/icon_act_user_user"
            android:drawableStart="@drawable/icon_act_user_user"
            android:hint="@string/user_login_name"
            android:inputType="text" />

        <TextView
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:textColor="@color/text_hint_color"
            android:gravity="end"
            android:text="@string/check_login_user_name"
            android:layout_height="wrap_content" />

        <EditText
            style="@style/app_base_text.drawable.pass_et"
            android:id="@+id/act_login_password_et"
            android:hint="@string/act_user_login_password_ev" />

        <Button
            android:id="@+id/act_login_sure_btn"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/btn_back"
            android:text="@string/act_user_login_login_btn" />

        <TextView
            style="@style/app_base_text.clickable_tv"
            android:id="@+id/act_user_login_not_login_tv"
            android:layout_width="match_parent"
            android:gravity="end"
            android:textSize="16sp"
            android:text="@string/act_user_login_nologin_tv"/>

    </LinearLayout>
</LinearLayout>
</ScrollView>