<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="15dip"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tv_back"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/act_add_channel_title_tv"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/act_add_channel_select_style_tv"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:stretchColumns="0,1" >

            <TableRow>

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/futures_choose"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/icon_futures" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dip"
                        android:text="@string/act_add_channel_futures_tv" />
                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/stock_choose"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/icon_stock" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dip"
                        android:text="@string/act_add_channel_stock_tv" />
                </LinearLayout>
            </TableRow>

            <TableRow>

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/exchange_choose"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/icon_exchange" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dip"
                        android:text="@string/act_add_channel_exchange_tv" />
                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/funds_choose"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/icon_funds" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dip"
                        android:text="@string/act_add_channel_funds_tv" />
                </LinearLayout>
            </TableRow>

            <TableRow>

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/money_choose"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/icon_money" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dip"
                        android:text="@string/act_add_channel_money_tv" />
                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/special_choose"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/icon_special" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dip"
                        android:text="@string/act_add_channel_special_tv" />
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>

    <TextView
        android:id="@+id/act_add_channel_add_more_channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="添加多个频道"
        android:layout_gravity="end"
        android:linksClickable="true"
        android:clickable="true"
        android:textColor="@color/text_link_color" />

    <Button
        android:id="@+id/channel_quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_back"
        android:onClick="@color/abc_search_url_text_pressed"
        android:text="@string/btn_back" />

</LinearLayout>