<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_theme_back">

        <TextView
            android:id="@+id/act_splash_test_tip_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:alpha="0"
            android:gravity="center"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/act_splash_text_tip_tv"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/color_white_app"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/act_splash_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/icon_app"
                android:drawablePadding="10dp"
                android:drawableStart="@mipmap/icon_app"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:padding="5dp"
                android:text="@string/copyright_fiance"
                android:textColor="@color/lightGray" />
        </LinearLayout>

    </RelativeLayout>
</layout>