<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="channelType"
            type="String" />

        <variable
            name="presenter"
            type="com.example.econonew.presenter.AddOneChannelPresenter" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            style="@style/app_base_layout"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/act_add_one_channel_name_btn"
                style="@style/app_base_btn.drawable"
                android:drawableTop="@drawable/icon_funds_name"
                android:text="@{channelType}" />

            <TextView
                android:id="@+id/act_add_one_channel_name_tv"
                style="@style/app_base_text"
                android:labelFor="@id/act_add_one_channel_name_btn"
                android:text="@string/please_select"
                android:textSize="@dimen/text_size_large" />
        </LinearLayout>

        <LinearLayout
            style="@style/app_base_layout"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/act_add_one_channel_info_btn"
                style="@style/app_base_btn.drawable"
                android:drawableTop="@drawable/icon_category"
                android:text="@string/message_type" />

            <TextView
                android:id="@+id/act_add_one_channel_info_tv"
                style="@style/app_base_text"
                android:labelFor="@id/act_add_one_channel_info_btn"
                android:text="@string/please_select"
                android:textSize="@dimen/text_size_large" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_ok"
            style="@style/btn"
            android:layout_width="match_parent"
            android:text="@string/btn_ok" />

    </LinearLayout>
</layout>