<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="presenter"
            type="com.example.econonew.presenter.AddMoreChannelPresenter" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            style="@style/app_base_layout"
            android:padding="10dp">

            <TextView
                android:id="@+id/act_add_more_channel_select_count"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center" />

            <Button
                android:id="@+id/btn_ok"
                style="@style/btn"
                android:onClick="@{() -> presenter.okBtnClick()}"
                android:text="@string/btn_ok" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_white_app">

            <LinearLayout
                style="@style/app_base_layout"
                android:orientation="vertical">

                <TextView
                    style="@style/text_label"
                    android:background="@drawable/tv_back"
                    android:text="@string/added" />

                <com.example.econonew.view.customview.FlowLayout
                    android:id="@+id/act_add_more_channel_added_ly"
                    style="@style/app_base_layout"
                    android:layout_margin="10dp"
                    android:background="@drawable/et_back" />

                <TextView
                    style="@style/text_label"
                    android:background="@drawable/tv_back"
                    android:text="@string/not_add" />

                <com.example.econonew.view.customview.FlowLayout
                    android:id="@+id/act_add_more_channel_notadd_ly"
                    style="@style/app_base_layout"
                    android:layout_margin="10dp"
                    android:background="@drawable/et_back" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>